# tiny_rv32

rtl/tiny_rv_core/: memdev.sv  rv_opcodes.sv  tiny_rv.sv  tiny_rv_decode.sv  tiny_rv_dprf.sv  tiny_rv_exec.sv  tiny_rv_fetch_directmap.sv  tiny_rv_rr.sv  tiny_rv_tb_fetch.sv  wbpriarbiter.v
rtl/tiny_rv_core/exec/: tiny_rv_alu.sv  tiny_rv_br.sv  tiny_rv_csr.sv  tiny_rv_exec_alu.sv  tiny_rv_mem.sv
testbench/fetch_tb/: .gitignore  Makefile  fetch_tb.sv
testbench/verilator/: .gitignore  CMakeLists.txt  Makefile
testbench/verilator/gtkwave/: opcode.dict  standard_debug.gtkw
testbench/verilator/src/: main.cpp  testbench.h
